clean up template

--- a/cooperhewitt/src/main/res/values/strings.xml
+++ b/cooperhewitt/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
   <string name="post_subtitle">Submitted by %s</string>
   <string name="retry">Retry</string>
   <string name="search_hint">search_hint</string>
-  <string name="default_subreddit">search hint</string>
+  <string name="default_string">search hint</string>
 
 </resources>
